MB-34412: Add prepare functions to KVBucket and VBucket

We need prepare specific functions for dealing with prepares
received via DCP.

Change-Id: Ib47c36c4f016a21d55303ee81078f95a35a54026
Reviewed-on: http://review.couchbase.org/110366
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>